# ChangeLog for media-libs/gstreamer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.341 2013/03/05 22:15:04 eva Exp $

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -gstreamer-0.10.35.ebuild, -gstreamer-1.0.3.ebuild, -gstreamer-1.0.5.ebuild:
  Clean up old revisions.

  03 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for sh, wrt bug #458188

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-0.10.36.ebuild:
  Stable for sh, wrt bug #456476

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for alpha, wrt bug #458188

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for hppa, wrt bug #458188

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for sparc, wrt bug #458188

  22 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for arm, wrt bug #458188

  22 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for ia64, wrt bug #458188

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for ppc64, wrt bug #458188

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for ppc, wrt bug #458188

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for x86, wrt bug #458188

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.5-r1.ebuild:
  Stable for amd64, wrt bug #458188

*gstreamer-1.0.5-r1 (12 Feb 2013)

  12 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gstreamer-1.0.5-r1.ebuild:
  Remove .la files (bug #456164, thanks to Paolo Pedroni).

  10 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-0.10.36.ebuild:
  Stable for sparc, wrt bug #454906

  07 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-0.10.36.ebuild: