@@ -4,14 +4,16 @@ Hash: SHA256
 AUX gstreamer-0.10.36-disable-test_fail_abstract_new.patch 1319 SHA256 05f71ddb15e048cc5ac04362e85892e42077b8bce5e3efb573000d6384b03d6e SHA512 6d2ef5d837551481c85b75edc9246049ca237d8b7efd462646a39ce5526a9b309a6390f2257930bfc54383c9b13447002b2c61f777d38e717995eee6030f5198 WHIRLPOOL 501c5ac7ac73bececad06bda4f21c2131d305d13a773c9e59160e8df9f33bb7989c3ae544e093ee240d8e3e27f315b23e494f5927b2de64ba2fded92eb42ef58
 DIST gstreamer-0.10.36.tar.xz 3025876 SHA256 9151aa108c177054387885763fa0e433e76780f7c5655c70a5390f2a6c6871da SHA512 7468abb578398681d2adb0e9bbc9ee8ae25aaef72369d45a66ada6c67d1759afdce606cb32e68d9e30ae813196bdfef3d4d33202bc77839cc1fbf5fc436c1bd8 WHIRLPOOL 03b841624552be860d4bf824bde9d6d5d6afc629048244b02037c96370c88191f34a6d09f02af61f295a9d6f84952efec2c5d4b0a28e8e70cd17966ed1b01d93
 DIST gstreamer-1.0.5.tar.xz 3130428 SHA256 26c2827567f09a46d0a3bc1e7f8696b2ae72b047306539178079abae487c5b77 SHA512 17d5e96a42a4c475971483be04272ce486d69df819c3ed8415ca5fcad4657628a5d0405b3e1c06c19f2bfc7936125330871d3751e3057f05521b6afeaee0a85a WHIRLPOOL 322725e2a5093f90a02bdde92cb04a989db5c57720e397a5e2cee103f484cb80d31d1eac98fa89836089d4ff6c3ba37c7e29d2be0e5d35d5420258a6f49bbbf8
+DIST gstreamer-1.0.6.tar.xz 3136000 SHA256 50d4050cd6a23684b6bbf40a9b7c132edfb39fe9db2d81980adaa6e72f4d5826 SHA512 6d9f84ba9e92fa06a531ce9387bbf88b02847c13ab98712ce597aad6653ba2800563bd9353ea5b6330c5f1b9b5040c29cb7b692c49aae7bd355bf8660324b1b4 WHIRLPOOL e61f43a89056278b1a470e977d90ab9f7fdd16e82c2c9b2c4beed1726ae9fbad5edf35c6a2219199dc0e48bc7e1f6e08f66e7ec45be0ed86f834d556c7b42f3e
 EBUILD gstreamer-0.10.36.ebuild 3131 SHA256 8fceb51e0b76fe8bf25a70c747563864dcae37fac04d00eb491ebabd2d0448e6 SHA512 acde683a2d05bb83e8ad5ee0ce3e29a147488964826e1ca05de3fdfe91c7ee067c564aceca4cb2f7d815386fd3b7b40694739a69663cd8d47350a1ad670f1187 WHIRLPOOL 8cb0b98f3b2c188b163640a5ee8c0557610dc684de9268fd9a866dba9f74e02d2d5ce39c6558e0215b72f08839e9f0edff660a602caade6b6d8159c3a854333a
 EBUILD gstreamer-1.0.5-r1.ebuild 2230 SHA256 dab07463d983ca54f9627cbf85c1d80013d37bee9cc17a1a7d993eb7f2a1b85d SHA512 6d168567cf46a1735094b51990c88fb20b026662c1018e59dae0e42fc8853ec869e3b64e80e2e1bd9bd44ebbcd1e2738ed5354b04623af45da3c0fbe6ff5811d WHIRLPOOL cc3cfaa49b744df5b625626f0ec81585790d4edc6baf816a22b30677b1c7c4f58efc6190133de8af8e06d1efc64f0c912837f2cd4e7eaff02428592dc2cb5689
-MISC ChangeLog 45587 SHA256 36d92a505a6a15ac87c729bc6e5ee3c013e80c566ea7164388c88fc63ca43d91 SHA512 35da9fabd0e04df29b70067b98c70145b5e04b0b874c02149c93dbceeff4c9763bb5bac115693c42cf89f189c5982ab177a0e61b2896237e73879022e891f394 WHIRLPOOL a098d5f55b6c0d78a14e5aeafd9bfd0cad0a137b9f811a8ded01244f1c2846c7958d471a1948b93568ddaa9484004157457436a859900165cec665644aa3107e
+EBUILD gstreamer-1.0.6.ebuild 2236 SHA256 0bcee2c76732dd72b08429320fc880190633d678adaa5ba11c7951583cb9ee5f SHA512 0103c22b75c12aa42da6d7bb5db20bedca201cce74feab747f7ce17da5738bce82786a9a2646eae03d87ad6c4fa50b0b4b72c3886bd8f2f0ccfeddefd32937ca WHIRLPOOL aad09ef236010bd5b347d348632c42c645eae7b70247ef4d3417d65e30b3b906bf09a4f6bdb4a83ffe8155ee85fa42e533800041388a92dd3238220b05daa1a5
+MISC ChangeLog 45715 SHA256 af015e440449f752c91027f8019f90cf21c73bcdcf9d085a21a71a5914f6f772 SHA512 0ffd54b0852262c02f7277ee24d5ca4792d4af8e7610615503e04225da023c200acff8597f6663fc413de0f86756e91441959b518c2d5fc16ca4d0113817e43d WHIRLPOOL 4c15cc3e4101da545d691d4accaf769785177dc3ba53120b4fcc3a3dfe481d174b6f1b1ffc8f653c8c17e4e4dd030768ff9d4ffaa69274f84ca9269d0a56be48
 MISC metadata.xml 356 SHA256 56bce20bed627cb8a3aabba94b49891f2fc9c62001d873e6ebf06ec53fd1072e SHA512 0cdd5271f2df57644bc7d8fee21a291984b93bb63d07fc5da0f8299b99d96752a10ff06f1a19f85c7caf84e41219d187ed94e21575ab7ba495f68e7f53ddb499 WHIRLPOOL 6e5407c243fa4fea8e475434da67fc4fcab0ec13603a8998cd844c39dffaf2642dded7bf49c6ecc69bf600176a710f89a1f525eb7c60de2249cf829366877e47
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlE2bmkACgkQ1fmVwcYIWAbR0QCfeeHoHmmMHORvz80U22UToZVb
-+4MAmgPTWWZ1TBW8Ehf7J50sLyvQuzBj
-=k6jw
+iEYEAREIAAYFAlFYxD8ACgkQ1fmVwcYIWAZwcQCglJvLbEdW1h702PZXxaUL+PhP
+7Y0An0kCkjz/h4o/yHCLboxTDdXgxDYK
+=+w2L
 -----END PGP SIGNATURE-----
