@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.341 2013/03/05 22:15:04 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.342 2013/03/31 23:18:22 eva Exp $
+
+*gstreamer-1.0.6 (31 Mar 2013)
+
+  31 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> +gstreamer-1.0.6.ebuild:
+  Version bump.
 
   05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
   -gstreamer-0.10.35.ebuild, -gstreamer-1.0.3.ebuild, -gstreamer-1.0.5.ebuild:
